--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "3.2.0",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "4.0.14",
+    "vue-swatches": "^2.1.1",
     "vue3-smooth-dnd": "0.0.2",
     "vuex": "4.0.2"
   },
