--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dropzone": "6.0.0-beta.1",
     "quill": "1.3.6",
     "vue": "3.2.0",
+    "vue-collapse": "^1.0.31",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "4.0.14",
     "vue3-smooth-dnd": "0.0.2",
