--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "quill": "1.3.6",
     "vue": "3.2.0",
     "vue-collapse": "^1.0.31",
+    "vue-ctk-date-time-picker": "^3.0.0-alpha.0",
     "vue-drag-n-drop": "^1.3.0",
     "vue-flatpickr-component": "9.0.5",
     "vue-router": "4.0.14",
